sumo/tests/traci/VariableRetrieval/Route/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa6 0x54 xxx
simstep 6 1
